@@ -194,11 +194,11 @@ class MainWindow(QtWidgets.QMainWindow, Ui_MainWindow):
                      + "for Airborne Scientific Campaigns. XML files generated by this version conf"
                      + "orm to V%s of the INSPIRE metadata and XML Standard.</p><p>For any question"
                      + "s, more information, or to submit a bug report, please contact <a href=\"ma"
-                     + "ilto:olivier.henry.at.meteo.fr\"><span style=\" text-decoration: underline;"
-                     + " color:#0000ff;\">olivier.henry.at.meteo.fr</span></a>.</p><p>The latest ve"
+                     + "ilto:bureau.at.eufar.net\"><span style=\" text-decoration: underline;"
+                     + " color:#0000ff;\">bureau.at.eufar.net</span></a>.</p><p>The latest ve"
                      + "rsion and source code of the EUFAR Metadata Creator can be found at <a href"
-                     + "=https://github.com/eufarn7sp/emc-eufar><span style=\" text-decoration"
-                     + ": underline; color:#0000ff;\">https://github.com/eufarn7sp/emc-eufar</"
+                     + "=https://github.com/EUFAR/emc-eufar><span style=\" text-decoration"
+                     + ": underline; color:#0000ff;\">https://github.com/EUFAR/emc-eufar</"
                      + "a></p></body></html>") % (_version, _py_version, _qt_version, _inspire_version)
         self.aboutWindow = MyAbout(aboutText)
         x1, y1, w1, h1 = self.geometry().getRect()
@@ -781,10 +781,10 @@ class DownloadAndParseJSON(Qt.QThread):
     def __init__(self):
         Qt.QThread.__init__(self)
         logging.debug('mainwindow.py - DownloadAndParseJSON - starting ...')
-        self.url_list = ['http://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx', 
-                         'http://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
-                         'http://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx',
-                         'http://xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+        self.url_list = ['http://eufar.net/api/json/ta/open/aircraft/', 
+                         'http://eufar.net/api/sad89712hhdsa89yp1/json/projects/',
+                         'http://eufar.net/api/json/ta/open/operators/',
+                         'http://eufar.net/api/json/instruments/'
                          ]
         self.db_list = []
 
