@@ -10,6 +10,12 @@ OFFLINE VERSION TESTED ON:
     - Windows 7, 8.1, 10
 
 
+January 31 2018, Release version 1.3.1 [ONLINE]
+===============================================
+  FIXED:
+    - links to the EMC GitHub repository have been fixed.
+
+
 September 26 2017, Release version 1.3.0 [OFFLINE]
 ========================================
   The new API of the EUFAR website has been implemented in EMC. The user has now the possibility to select a project from the Project acronym textbox, the function will then fill in different fields automatically.
